--- a/style.css
+++ b/style.css
@@ -126,3 +126,15 @@ html {
   width: 100%;
   height: 80vh;
 }
+
+.description {
+  font-size: 30px;
+  font-weight: bold;
+  color: #000;
+  position: absolute;
+  top: 10%;
+  left: 80%;
+  padding: 8px 15px;
+  background-color: #fff;
+  cursor: pointer;
+}
